--- a/LocalLink-backend/package.json
+++ b/LocalLink-backend/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/hubei-xhjy/LocalLink#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.4"
