--- a/LocalLink-frontend/package.json
+++ b/LocalLink-frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "socket.io-client": "^4.7.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
